Wed Jul 10 22:03:27 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_2comp): Don't use bary_plus_one.
	  (bary_add_one): Replaced by the implementation of bary_plus_one.

Wed Jul 10 20:48:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (sizeof_bdigit_dbl): check sizeof(BDIGIT_DBL).

	* internal.h (STATIC_ASSERT): move from enum.c.

Wed Jul 10 20:08:21 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (SIZEOF_BDIGIT_DBL): Add a ifdef guard for test.

Wed Jul 10 14:18:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (fork_daemon): kill the other threads all and abandon the
	  kept mutexes.

Wed Jul 10 11:35:36 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/net/http/test_http.rb (TestNetHTTP_v1_2#test_get,
	  TestNetHTTP_v1_2_chunked#test_get): shouldn't check
	  HttpResponse#decode_content if Zlib is not available.
	  ko1 complained via IRC.

Wed Jul 10 10:20:07 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/rbinstall.rb: always require rubygems to stabilize rubygems
	  related status like whether Gem::Specification is defined or not.

	* tool/rbinstall.rb (Gem::Specification.unresolved_deps): define stub.

Wed Jul 10 08:21:15 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems 2.1
	* test/rubygems:  Ditto.

Wed Jul 10 07:34:34 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/ext/ext_conf_builder.rb:  Remove siteconf file after
	  building the gem.
	* test/rubygems/test_gem_ext_ext_conf_builder.rb:  Test for the above.

	* lib/rubygems/psych_tree.rb (module Gem):  Add backward compatibility
	  for r41148

	* test/rubygems/test_gem_package.rb:  Add backward compatibility for
	  double-slash elimination.

Wed Jul 10 06:22:27 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (date_zone_to_diff): [ruby-core:55831].

Wed Jul 10 00:41:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): x*1 is x.

Tue Jul  9 22:24:39 2013  Tanaka Akira  <akr@fsij.org>
